--- a/public/css/app.css
+++ b/public/css/app.css
@@ -568,8 +568,8 @@ pre code {
   }
 }
 .row {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
   margin-right: -15px;
   margin-left: -15px;
 }
