--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,6 +65,10 @@ body {
   background-color: #f8fafc;
 }
 
+footer {
+  color: #fff;
+}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
