--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4575,6 +4575,10 @@ input[type=button].btn-block {
   border-radius: 0.25rem;
 }
 
+.breadcrumb.brands-container {
+  background-color: #EFECE9;
+}
+
 .breadcrumb-item + .breadcrumb-item {
   padding-left: 0.5rem;
 }
