De links hebben een nieuwe kleur gekregen
De links zijn nu beter leesbaar (contrast van ~4.6)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -159,12 +159,12 @@ sup {
 }
 
 a {
-  color: #3490dc;
+  color: #c82e29;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #1d68a7;
+  color: #891f1c;
   text-decoration: underline;
 }
 
