--- a/public/css/app.css
+++ b/public/css/app.css
@@ -577,8 +577,8 @@ pre code {
   }
 }
 .row {
-  /* display: flex; */
-  /* flex-wrap: wrap; */
+  display: flex;
+  flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
 }
