--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4575,7 +4575,7 @@ input[type=button].btn-block {
   border-radius: 0.25rem;
 }
 
-.breadcrumb.brands-container {
+.brands-container {
   background-color: #EFECE9;
 }
 
