De lijst met type- en productnummers wordt nu in een grid weergegeven
Op de pagina van een merk worden nu alle handleidingen verdeeld over kolommen in plaats van een lange lijst.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -556,6 +556,11 @@ pre code {
   font-weight: 600;
 }
 
+.manual-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 @media (min-width: 576px) {
   .container-sm, .container {
     max-width: 540px;
