--- a/public/css/app.css
+++ b/public/css/app.css
@@ -600,6 +600,14 @@ pre code {
   margin-left: auto;
 }
 
+.popular-manuals {
+  background-color: #e9ecef;
+}
+
+.popular-manuals li {
+  margin: 10px 0;
+}
+
 .container > p {
   font-size: 1.2em;
   font-weight: 600;
