--- a/public/css/app.css
+++ b/public/css/app.css
@@ -598,6 +598,9 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container:not(nav .container, footer .container) {
   margin-bottom: 15px;
 }
 
